--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pydantic>=2.1.1
-python-dotenv>=1.0.0
-fastapi>=0.100.0
+fastapi[all]>=0.104.0
+hypercorn>=0.14.4
+pydantic>=2.4.2
+pydantic-settings>=2.0.3
 rich>=13.4.2
 httpx>=0.24.0
-tomli>=1.1.0 ; python_version < "3.11"
-hypercorn[trio]>=0.14.4
