chore: updated example env

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,4 @@
-API_KEY="" # https://300.ya.ru/ -> API -> Получить токен -> Войти как ...
-YANDEX_COOKIE="Session_id=XXXX;" # !!! Required Session_id COOKIE! You can log in to your account and then from any request to yandex catch them. AT YOUR OWN RISK !!!
+SERVICE_PORT=3312
+USE_WORKER="false"
+API_TOKEN="" # For get sharing url
+# SESSION_ID_COOKIE="XXXX" # If lib YaHMAC is invalid you can set your cookies and summarize articles/text (video requires valid YaHMAC)
