chore: added LOG_TO_FILE env

--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
 SERVICE_PORT=3312
-USE_WORKER="false"
+USE_WORKER=false
+LOG_TO_FILE=false
 API_TOKEN="" # For get sharing url
 # SESSION_ID_COOKIE="XXXX" # If lib YaHMAC is invalid you can set your cookies and summarize articles/text (video requires valid YaHMAC)
